# PointCloudPractice

./: README.md
week1/PCA/: CMakeLists.txt  README.md  testPCA.cpp  testPCA2.cpp  testPCA3.cpp
week1/PCA/src/: pca.cpp  pca.h  pointcloud.cpp  pointcloud.h
week1/VoxelFilter/: CMakeLists.txt  README.md  testVoxelFilter.cpp
week1/VoxelFilter/data/: car_0001.txt
week1/VoxelFilter/src/: common.h  pointcloud.cpp  pointcloud.h  voxelfilter.cpp  voxelfilter.h
week2/: README.md  benchmark.py  kdtree.py  octree.py  result_set.py
week3/: CMakeLists.txt  README.md  build.sh  compare_cluster.py  testGmm.py  testKmeans.py  testSpectralCluster.py
week3/src/: common.h  gmm.cpp  gmm.h  kmeans.cpp  kmeans.h  pycluster.cpp  spectralcluster.cpp  spectralcluster.h
week4/: .gitignore  CMakeLists.txt  README.md  testGroundPointRemoval.cpp  testPointCloudClustering.cpp
week4/practice01/: README.md
week4/practice01/src/: common.h  groundextraction.h  utils.cpp  utils.h
week4/practice02/: CMakeLists.txt  README.md  build.sh  testGroundPointRemoval.cpp  testPointCloudClustering.cpp
week4/practice02/src/: common.h  groundextraction.cpp  groundextraction.h  pointcloud.cpp  pointcloud.h  pointcloudcluster.cpp  pointcloudcluster.h  ransac.cpp  ransac.h  ransac_types.cpp  ransac_types.h
week4/src/: groundextraction.cpp  pointcloudcluster.cpp  pointcloudcluster.h
week5/: PointNet.py  README.md  train.py
week6/: README.md
week7/: CMakeLists.txt  README.md  build.sh  testISS.cpp
week7/data/: guitar_0001.txt  piano_0001.txt
week7/src/: common.h  iss.cpp  iss.h  pointcloud.cpp  pointcloud.h
week8/: CMakeLists.txt  README.md  testFPFH.cpp  testSHOT.cpp
week8/scripts/: plotDescriptor.py
week8/src/: common.h  fpfh.cpp  fpfh.h  utils.cpp  utils.h
